// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CodeGenerator > should generate inline definitions for unknown types when allowed 1`] = `
"/**
 * Auto-generated from OBS configuration
 * Generated by @sceneify/obs-to-code
 */

import { Effect, Schema } from "effect";
import {
  InputType,
  FilterType,
  Input,
  Scene,
  OBSSocket,
  Sceneify,
} from "@sceneify/core-rewrite";

// ─── Inline Type Definitions ────────────────────────────────────────────────

class CustomUnknownKindInput extends InputType("custom_unknown_kind")({ "custom_prop": Schema.String }) {}


// ─── Input Declarations ─────────────────────────────────────────────────────

const unknownInput = Input.declare(CustomUnknownKindInput, {
  name: "Unknown Input",
  settings: {
    custom_prop: "value",
  },
});


// ─── Exports ────────────────────────────────────────────────────────────────

export { unknownInput };
"
`;

exports[`CodeGenerator > should generate known inputs and scenes 1`] = `
"/**
 * Auto-generated from OBS configuration
 * Generated by @sceneify/obs-to-code
 */

import { Effect } from "effect";
import {
  InputType,
  FilterType,
  Input,
  Scene,
  OBSSocket,
  Sceneify,
} from "@sceneify/core-rewrite";
import {
  BrowserSource,
  ColorSource,
} from "@sceneify/sources";

// ─── Input Declarations ─────────────────────────────────────────────────────

const chatBrowser = Input.declare(BrowserSource, {
  name: "Chat Browser",
  settings: {
    url: "https://example.com/chat",
    width: 400,
    height: 600,
  },
});

const background = Input.declare(ColorSource, {
  name: "Background",
  settings: {
    color: 4281150778,
    width: 1920,
    height: 1080,
  },
});


// ─── Scene Declarations ─────────────────────────────────────────────────────

const mainScene = Scene.declare({
  name: "Main Scene",
  items: {
    background: {
      source: background,
      transform: {
        positionX: 0,
        positionY: 0,
      },
      index: 0,
    },
    chatBrowser: {
      source: chatBrowser,
      transform: {
        positionX: 100,
        positionY: 100,
        scaleX: 0.5,
        scaleY: 0.5,
      },
      index: 1,
    },
  },
});


// ─── Exports ────────────────────────────────────────────────────────────────

export { chatBrowser, background, mainScene };
"
`;

exports[`CodeGenerator > should handle filters 1`] = `
"/**
 * Auto-generated from OBS configuration
 * Generated by @sceneify/obs-to-code
 */

import { Effect } from "effect";
import {
  InputType,
  FilterType,
  Input,
  Scene,
  OBSSocket,
  Sceneify,
} from "@sceneify/core-rewrite";
import {
  ImageSource,
  ColorCorrectionFilter,
} from "@sceneify/sources";

// ─── Input Declarations ─────────────────────────────────────────────────────

const webcam = Input.declare(ImageSource, {
  name: "Webcam",
  settings: {
    file: "/path/to/webcam.png",
  },
  filters: {
    colorCorrection: {
      type: ColorCorrectionFilter,
      name: "Color Correction",
      settings: {
        brightness: 1.1,
        contrast: 1.2,
      },
    },
  },
});


// ─── Exports ────────────────────────────────────────────────────────────────

export { webcam };
"
`;
